# homebrew-gcc-cross

./: .gitignore  README.md  aarch64-ctng-linux-musl.rb  arm-ctng-linux-musleabihf.rb  armv7-ctng-linux-musleabihf.rb  build.sh  cmake-build-test.sh  init.sh  meson-build-test.sh  x86_64-ctng-linux-musl.rb
aarch64-ctng-linux-musl/: .config
arm-ctng-linux-musleabihf/: .config
armv7-ctng-linux-musleabihf/: .config
aux-scripts/: tar-release.sh  upload-release.sh
test/: CMakeLists.txt  lib.cpp  lib.h  main.cpp  meson.build
x86_64-ctng-linux-musl/: .config
